--- a/css/style.css
+++ b/css/style.css
@@ -45,3 +45,17 @@ header img{
 
     background-color: #081d3191;
 }
+
+.splash button{
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    width: 40px;
+    height: 40px;
+    background-color: rgba(255, 0, 0, 1);
+    color: white;
+}
+
+.splash button:hover {
+    background-color: rgba(255, 0, 0, 0.5);
+}
